# 3d-cutter

./: CMakeLists.txt  build.sh
src/: Cutting.cpp  Cutting.h  main.cpp
